[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/magma_stream_neck.png" type="Texture" id=1]
[ext_resource path="res://Enemy/FireStream.gd" type="Script" id=2]
[ext_resource path="res://Assets/magma_stream_head.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 96 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 48.25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10.8413, 10.3299 )

[node name="FireStream" type="Node2D"]
script = ExtResource( 2 )

[node name="Neck" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Neck"]
position = Vector2( 0, 48 )
frames = SubResource( 5 )
playing = true

[node name="Area2D" type="Area2D" parent="Neck/AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Neck/AnimatedSprite/Area2D"]
shape = SubResource( 11 )

[node name="Head" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="Head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/Area2D"]
position = Vector2( 0, 6.44882 )
shape = SubResource( 12 )

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0, -667 )
scale = Vector2( 6.4, 67.7 )
[connection signal="body_entered" from="Neck/AnimatedSprite/Area2D" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Head/Area2D" to="." method="_on_Area_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
